@@ -1,15 +1,28 @@
 package com.safefoodtruck.sft.store.service;
 
+import static com.safefoodtruck.sft.common.message.ValidationMessage.*;
+import static com.safefoodtruck.sft.review.domain.QReview.*;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import com.querydsl.core.Tuple;
 import com.safefoodtruck.sft.common.util.MemberInfo;
 import com.safefoodtruck.sft.member.domain.Member;
+import com.safefoodtruck.sft.member.exception.NotFoundMemberException;
 import com.safefoodtruck.sft.member.repository.MemberRepository;
-import com.safefoodtruck.sft.menu.domain.Menu;
 import com.safefoodtruck.sft.menu.dto.response.MenuListResponseDto;
 import com.safefoodtruck.sft.menu.dto.response.MenuResponseDto;
 import com.safefoodtruck.sft.notification.service.NotificationService;
 import com.safefoodtruck.sft.review.repository.ReviewRepository;
 import com.safefoodtruck.sft.store.domain.Store;
 import com.safefoodtruck.sft.store.domain.StoreImage;
+import com.safefoodtruck.sft.store.dto.request.StoreAILogoRequestDto;
 import com.safefoodtruck.sft.store.dto.request.StoreLocationRequestDto;
 import com.safefoodtruck.sft.store.dto.request.StoreNoticeRegistRequestDto;
 import com.safefoodtruck.sft.store.dto.request.StoreRegistRequestDto;
@@ -17,21 +30,14 @@ import com.safefoodtruck.sft.store.dto.request.StoreUpdateRequestDto;
 import com.safefoodtruck.sft.store.dto.response.StoreFindResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreInfoListResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreInfoResponseDto;
-import com.safefoodtruck.sft.store.dto.response.StoreLocationResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreNoticeResponseDto;
-import com.safefoodtruck.sft.store.dto.response.StoreRegistResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreUpdateResponseDto;
 import com.safefoodtruck.sft.store.exception.StoreNotFoundException;
 import com.safefoodtruck.sft.store.repository.StoreImageRepository;
 import com.safefoodtruck.sft.store.repository.StoreRepository;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
 @Service
@@ -46,26 +52,21 @@ public class StoreServiceImpl implements StoreService {
 	private final NotificationService notificationService;
 
 	@Override
-	public StoreRegistResponseDto registStore(StoreRegistRequestDto storeRegistRequestDto) {
-		String email = MemberInfo.getEmail();
-		Member owner = memberRepository.findByEmail(email);
+	public void registStore(StoreRegistRequestDto storeRegistRequestDto) {
+		Member owner = findLoginOwner();
 		Store store = Store.of(owner, storeRegistRequestDto);
-
 		store.setOwner(owner);
 		Store savedStore = storeRepository.save(store);
 
-		if (storeRegistRequestDto.storeImageDto() != null) {
-			StoreImage storeImage = StoreImage.builder()
-				.store(savedStore)
-				.savedUrl(storeRegistRequestDto.storeImageDto().savedUrl())
-				.savedPath(storeRegistRequestDto.storeImageDto().savedPath())
-				.build();
-
-			StoreImage savedStoreImage = storeImageRepository.save(storeImage);
-			savedStoreImage.setStore(store);
-		}
-
-		return StoreRegistResponseDto.fromEntity(email, savedStore);
+		Optional.ofNullable(storeRegistRequestDto.storeImageDto())
+			.ifPresent(storeImageDto -> {
+				StoreImage storeImage = StoreImage.builder()
+					.store(savedStore)
+					.savedUrl(storeImageDto.savedUrl())
+					.savedPath(storeImageDto.savedPath())
+					.build();
+				storeImageRepository.save(storeImage);
+			});
 	}
 
 	@Override
@@ -73,110 +74,96 @@ public class StoreServiceImpl implements StoreService {
 		Store store = findLoginStore();
 		store.update(storeUpdateRequestDto);
 
-		StoreImage storeImage = storeImageRepository.findByStore(store);
-		storeImage.updateStoreImage(storeUpdateRequestDto.storeImageDto());
+		Optional.ofNullable(storeImageRepository.findByStore(store))
+			.ifPresent(storeImage -> {
+				storeImage.updateStoreImage(storeUpdateRequestDto.storeImageDto());
+				storeImageRepository.save(storeImage);
+			});
 
-		storeRepository.save(store);
-		storeImageRepository.save(storeImage);
-
-		return StoreUpdateResponseDto.fromEntity(store);
+		return StoreUpdateResponseDto.fromEntity(storeRepository.save(store));
 	}
 
 	@Override
 	public StoreFindResponseDto findMyStore() {
 		Store store = findLoginStore();
 		Integer averageStar = findStoreAverageStar(store.getId()).intValue();
-
 		return StoreFindResponseDto.fromEntity(store, averageStar);
 	}
 
 	@Override
 	public StoreFindResponseDto findStoreById(Integer storeId) {
-		Store store = storeRepository.findById(storeId).orElseThrow(StoreNotFoundException::new);
+		Store store = findStore(storeId);
 		Integer averageStar = findStoreAverageStar(storeId).intValue();
 		return StoreFindResponseDto.fromEntity(store, averageStar);
 	}
 
 	@Override
 	public MenuListResponseDto findStoreMenus(Integer storeId) {
-		Store store = storeRepository.findById(storeId).orElseThrow(StoreNotFoundException::new);
-		List<Menu> menuList = store.getMenuList();
-
-		List<MenuResponseDto> menuResponseDtos = menuList.stream()
+		Store store = findStore(storeId);
+		List<MenuResponseDto> menuResponseDtos = store.getMenuList().stream()
 			.map(MenuResponseDto::fromEntity)
 			.toList();
 
-		return MenuListResponseDto.builder()
-			.count(menuResponseDtos.size())
-			.menuResponseDtos(menuResponseDtos)
-			.build();
+		return new MenuListResponseDto(menuResponseDtos.size(), menuResponseDtos);
 	}
 
 	@Override
 	public void deleteStore() {
-		String email = MemberInfo.getEmail();
-		Optional<Integer> storeIdByOwnerEmail = storeRepository.findStoreIdByOwnerEmail(email);
-		if (storeIdByOwnerEmail.isEmpty()) {
-			throw new StoreNotFoundException();
-		}
-
-		int storeId = storeIdByOwnerEmail.get();
+		Integer storeId = storeRepository.findStoreIdByOwnerEmail(MemberInfo.getEmail())
+			.orElseThrow(StoreNotFoundException::new);
 		storeRepository.deleteById(storeId);
 	}
 
 	@Override
-	public boolean updateStoreStatus() {
+	public Boolean updateStoreStatus() {
 		Store store = findLoginStore();
 		store.toggleOpenStatus();
-		if (store.getIsOpen()) notificationService.favoriteSendNotify(store.getId(), store.getName());
-		return store.getIsOpen();
+		Boolean status = store.getIsOpen();
+		if (Boolean.TRUE.equals(status)) {
+			notificationService.favoriteSendNotify(store.getId(), store.getName());
+		}
+		return status;
 	}
 
 	@Override
 	public boolean getStoreStatus() {
-		Store store = findLoginStore();
-		return store.getIsOpen();
+		return findLoginStore().getIsOpen();
 	}
 
 	@Override
 	public StoreInfoListResponseDto findOpenStores() {
 		List<Store> openStores = storeRepository.findAllOpenStores();
 
-		List<Object[]> averageStarsData = reviewRepository.findAverageStarsForAllStores();
-		Map<Integer, Double> averageStarsMap = averageStarsData.stream()
-			.collect(Collectors.toMap(data -> (Integer) data[0], data -> (Double) data[1]));
+		Map<Integer, Double> averageStarsMap = reviewRepository.findAverageStarsForAllStores()
+			.stream()
+			.collect(Collectors.toMap(
+				tuple -> tuple.get(review.order.store.id),
+				StoreServiceImpl::apply,
+				(existing, replacement) -> {
+					throw new IllegalStateException("중복 키 발생 : " + existing);
+				}
+			));
 
 		List<StoreInfoResponseDto> storeInfoResponseDtos = openStores.stream()
-			.map(openStore -> {
-				Double averageStar = averageStarsMap.getOrDefault(openStore.getId(), 0.0);
-				return StoreInfoResponseDto.fromEntity(openStore, averageStar.intValue());
-			})
-			.collect(Collectors.toList());
-		log.info("store count : {}", storeInfoResponseDtos.size());
+			.map(store -> StoreInfoResponseDto.fromEntity(store,
+				averageStarsMap.getOrDefault(store.getId(), 0.0).intValue()))
+			.toList();
 
-		return StoreInfoListResponseDto.builder()
-			.count(storeInfoResponseDtos.size())
-			.storeInfoResponseDtos(storeInfoResponseDtos)
-			.build();
+		return new StoreInfoListResponseDto(storeInfoResponseDtos.size(), storeInfoResponseDtos);
 	}
 
 	@Override
-	public StoreLocationResponseDto updateStoreLocation(
-		StoreLocationRequestDto storeLocationRequestDto) {
+	public void updateStoreLocation(StoreLocationRequestDto storeLocationRequestDto) {
 		Store store = findLoginStore();
 		store.updateStoreLocation(storeLocationRequestDto);
 		storeRepository.save(store);
-
-		return StoreLocationResponseDto.fromEntity(store);
 	}
 
 	@Override
-	public StoreNoticeResponseDto updateStoreNotice(StoreNoticeRegistRequestDto storeNoticeRegistRequestDto) {
+	public void updateStoreNotice(StoreNoticeRegistRequestDto storeNoticeRegistRequestDto) {
 		Store store = findLoginStore();
 		store.updateNotice(storeNoticeRegistRequestDto.notice());
 		storeRepository.save(store);
-		notificationService.changedNoticeNotify(storeNoticeRegistRequestDto.connectedEmailList());
-		return StoreNoticeResponseDto.fromEntity(store);
 	}
 
 	@Override
@@ -185,27 +172,48 @@ public class StoreServiceImpl implements StoreService {
 	}
 
 	@Override
-	public StoreNoticeResponseDto deleteStoreNotice() {
+	public void deleteStoreNotice() {
 		Store store = findLoginStore();
 		store.deleteNotice();
 		storeRepository.save(store);
-
-		return StoreNoticeResponseDto.fromEntity(store);
 	}
 
-	public Store findLoginStore() {
-		String email = MemberInfo.getEmail();
-		return storeRepository.findStoreWithMenusAndImagesByOwnerEmail(email)
+	@Override
+	public String checkDuplicateSafetyLicenseNumber(final String safetyLicenseNumber) {
+		boolean exists = storeRepository.findStoreWithMenusAndImagesBySafetyLicenseNumber(
+				safetyLicenseNumber)
+			.isPresent();
+		return exists ? DUPLICATE.get() : POSSIBLE.get();
+	}
+
+	private Store findLoginStore() {
+		return storeRepository.findStoreWithMenusAndImagesByOwnerEmail(MemberInfo.getEmail())
 			.orElseThrow(StoreNotFoundException::new);
 	}
 
-	public Store findStore(Integer storeId) {
+	@Override
+	public void updateStoreAILogo(StoreAILogoRequestDto storeAILogoRequestDto) {
+		storeImageRepository.updateStoreImageByStoreId(storeAILogoRequestDto.storeId(),
+			storeAILogoRequestDto.savedUrl(),
+			storeAILogoRequestDto.savedPath());
+	}
+
+	private Store findStore(Integer storeId) {
 		return storeRepository.findStoreWithMenusAndImagesByStoreId(storeId)
 			.orElseThrow(StoreNotFoundException::new);
 	}
 
 	public Double findStoreAverageStar(Integer storeId) {
-		Double averageStar = reviewRepository.findAverageStarByStoreId(storeId);
-		return (averageStar != null) ? averageStar : 0.0;
+		return Optional.ofNullable(reviewRepository.findAverageStarByStoreId(storeId))
+			.orElse(0.0);
+	}
+
+	private Member findLoginOwner() {
+		return memberRepository.findByEmail(MemberInfo.getEmail())
+			.orElseThrow(NotFoundMemberException::new);
+	}
+
+	private static Double apply(Tuple tuple) {
+		return tuple.get(review.star.avg());
 	}
 }
